--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.2.0",
     "@neondatabase/serverless": "^0.10.2",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
+    "react-before-after-slider-component": "^1.1.8",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "replicate": "^0.33.0",
     "tailwind-merge": "^2.5.4",
